revert: Reverting appContainer styles and App.jsx back to original since all solutions tested do not fix the issue on mobile chrome cutting off footer when bottom bar scrolls into view.

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -91,7 +91,8 @@ button {
 .appContainer {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  min-height: calc(var(--vh, 1svh) * 100);
+  min-height: 100svh;
+  min-height: 100dvh;
 }
 
 @media (prefers-reduced-motion: reduce) {
